add analytics link to the ticket shop

--- a/src/pretix/presale/templates/pretixpresale/base.html
+++ b/src/pretix/presale/templates/pretixpresale/base.html
@@ -82,6 +82,7 @@
         <script type="text/javascript" src="{% static "iframeresizer/iframeResizer.contentWindow.js" %}"></script>
     {% endcompress %}
 {% endif %}
+<script defer data-domain="tickets.fachschaft-wiwi.ms" src="https://plausible.fachschaft-wiwi.ms/js/plausible.js"></script>
 {{ html_foot|safe }}
 </body>
 </html>
